--- a/prueba/Loading/MLBarLoading.xib
+++ b/prueba/Loading/MLBarLoading.xib
@@ -14,7 +14,9 @@
             <connections>
                 <outlet property="bodyArea" destination="Urn-xD-vdT" id="aHk-6C-6xN"/>
                 <outlet property="borderArea" destination="hKe-l7-42c" id="m0e-8z-7AZ"/>
+                <outlet property="label" destination="ZEg-tK-jSS" id="pdW-KN-3OB"/>
                 <outlet property="myView" destination="iN0-l3-epB" id="aCm-YL-Vyu"/>
+                <outlet property="outletCancelar" destination="rVD-bV-HpD" id="b0P-ks-ABt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -22,21 +24,42 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hKe-l7-42c">
+                <view alpha="0.65000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hKe-l7-42c">
                     <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Urn-xD-vdT">
                             <rect key="frame" x="87.5" y="273.5" width="200" height="100"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rVD-bV-HpD">
+                                    <rect key="frame" x="75" y="73" width="50" height="27"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                    <state key="normal" title="Cancelar"/>
+                                    <connections>
+                                        <action selector="cancelPressed:" destination="-1" eventType="touchUpInside" id="gyN-LV-0cA"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="100" id="5Ri-vB-yUC"/>
+                                <constraint firstAttribute="bottom" secondItem="rVD-bV-HpD" secondAttribute="bottom" id="NJm-Jk-YUq"/>
+                                <constraint firstItem="rVD-bV-HpD" firstAttribute="centerX" secondItem="Urn-xD-vdT" secondAttribute="centerX" id="Zef-rz-jbx"/>
                                 <constraint firstAttribute="width" constant="200" id="w7D-eE-9eP"/>
                             </constraints>
                         </view>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cargando" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZEg-tK-jSS">
+                            <rect key="frame" x="152" y="322.5" width="71.5" height="18"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                            <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
+                    <color key="backgroundColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
+                        <constraint firstItem="ZEg-tK-jSS" firstAttribute="centerX" secondItem="hKe-l7-42c" secondAttribute="centerX" id="Djt-g1-Ps0"/>
                         <constraint firstItem="Urn-xD-vdT" firstAttribute="centerY" secondItem="hKe-l7-42c" secondAttribute="centerY" id="V7w-9D-ppQ"/>
                         <constraint firstItem="Urn-xD-vdT" firstAttribute="centerX" secondItem="hKe-l7-42c" secondAttribute="centerX" id="Znj-iC-uQN"/>
+                        <constraint firstItem="ZEg-tK-jSS" firstAttribute="centerY" secondItem="hKe-l7-42c" secondAttribute="centerY" constant="8" id="vBz-Ln-7mz"/>
                     </constraints>
                 </view>
             </subviews>
