--- a/prueba/Loading/MLBarLoading.xib
+++ b/prueba/Loading/MLBarLoading.xib
@@ -24,7 +24,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view alpha="0.65000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hKe-l7-42c">
+                <view alpha="0.84999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hKe-l7-42c">
                     <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Urn-xD-vdT">
@@ -54,7 +54,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="ZEg-tK-jSS" firstAttribute="centerX" secondItem="hKe-l7-42c" secondAttribute="centerX" id="Djt-g1-Ps0"/>
                         <constraint firstItem="Urn-xD-vdT" firstAttribute="centerY" secondItem="hKe-l7-42c" secondAttribute="centerY" id="V7w-9D-ppQ"/>
