--- a/prueba/Loading/MLBarLoading.xib
+++ b/prueba/Loading/MLBarLoading.xib
@@ -26,40 +26,33 @@
             <subviews>
                 <view alpha="0.84999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hKe-l7-42c">
                     <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Urn-xD-vdT">
+                    <rect key="frame" x="0.0" y="283.5" width="375" height="100"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Urn-xD-vdT">
-                            <rect key="frame" x="87.5" y="273.5" width="200" height="100"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rVD-bV-HpD">
-                                    <rect key="frame" x="75" y="73" width="50" height="27"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                    <state key="normal" title="Cancelar"/>
-                                    <connections>
-                                        <action selector="cancelPressed:" destination="-1" eventType="touchUpInside" id="gyN-LV-0cA"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="100" id="5Ri-vB-yUC"/>
-                                <constraint firstAttribute="bottom" secondItem="rVD-bV-HpD" secondAttribute="bottom" id="NJm-Jk-YUq"/>
-                                <constraint firstItem="rVD-bV-HpD" firstAttribute="centerX" secondItem="Urn-xD-vdT" secondAttribute="centerX" id="Zef-rz-jbx"/>
-                                <constraint firstAttribute="width" constant="200" id="w7D-eE-9eP"/>
-                            </constraints>
-                        </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cargando" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZEg-tK-jSS">
-                            <rect key="frame" x="152" y="322.5" width="71.5" height="18"/>
+                            <rect key="frame" x="152" y="51" width="71.5" height="18"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                             <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rVD-bV-HpD">
+                            <rect key="frame" x="162.5" y="73" width="50" height="27"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <state key="normal" title="Cancelar"/>
+                            <connections>
+                                <action selector="cancelPressed:" destination="-1" eventType="touchUpInside" id="gyN-LV-0cA"/>
+                            </connections>
+                        </button>
                     </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="ZEg-tK-jSS" firstAttribute="centerX" secondItem="hKe-l7-42c" secondAttribute="centerX" id="Djt-g1-Ps0"/>
-                        <constraint firstItem="Urn-xD-vdT" firstAttribute="centerY" secondItem="hKe-l7-42c" secondAttribute="centerY" id="V7w-9D-ppQ"/>
-                        <constraint firstItem="Urn-xD-vdT" firstAttribute="centerX" secondItem="hKe-l7-42c" secondAttribute="centerX" id="Znj-iC-uQN"/>
-                        <constraint firstItem="ZEg-tK-jSS" firstAttribute="centerY" secondItem="hKe-l7-42c" secondAttribute="centerY" constant="8" id="vBz-Ln-7mz"/>
+                        <constraint firstAttribute="height" constant="100" id="5Ri-vB-yUC"/>
+                        <constraint firstItem="ZEg-tK-jSS" firstAttribute="centerX" secondItem="Urn-xD-vdT" secondAttribute="centerX" id="9lF-Xv-8U6"/>
+                        <constraint firstAttribute="bottom" secondItem="rVD-bV-HpD" secondAttribute="bottom" id="NJm-Jk-YUq"/>
+                        <constraint firstItem="rVD-bV-HpD" firstAttribute="centerX" secondItem="Urn-xD-vdT" secondAttribute="centerX" id="Zef-rz-jbx"/>
+                        <constraint firstItem="ZEg-tK-jSS" firstAttribute="centerY" secondItem="Urn-xD-vdT" secondAttribute="centerY" constant="10" id="l5M-Y3-kVf"/>
                     </constraints>
                 </view>
             </subviews>
@@ -67,10 +60,15 @@
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="hKe-l7-42c" secondAttribute="bottom" id="4uf-Mu-zva"/>
                 <constraint firstItem="hKe-l7-42c" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="87e-53-fIO"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Urn-xD-vdT" secondAttribute="trailing" id="9gN-G3-RjR"/>
+                <constraint firstItem="Urn-xD-vdT" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Vb5-Na-hl2"/>
+                <constraint firstItem="Urn-xD-vdT" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="axE-fp-ZVH"/>
+                <constraint firstItem="Urn-xD-vdT" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="iVT-2f-n68"/>
                 <constraint firstItem="hKe-l7-42c" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="q2S-e5-rIb"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="hKe-l7-42c" secondAttribute="trailing" id="wfo-T7-0bu"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <point key="canvasLocation" x="39.200000000000003" y="46.326836581709152"/>
         </view>
     </objects>
 </document>
